Suppress nags and linting nits from vsj1 and vsj2.rt1
I am never going back to fix these, so let's see just the new ones in
the various IDE "Problem" and "Tasks" lists.